# aipredictor

./: .gitignore  Cargo.toml  readme.md
src/: ai_model.rs  ai_model_repo.rs  consts.rs  image_repo.rs  image_viewer.rs  lib.rs  main.rs  usg_image.rs
