[package]
name = "aipredictor"
version = "0.1.0"
edition = "2021"

[lib]
name = "models"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
config = "0.13.3"
config-file = "0.2.3"
csv = "1.2.1"
env_logger = "0.11.3"
fltk = "1.3.34"
image = "0.24.5"
imageproc = "0.23.0"
log = "0.4.20"
rfd = "0.11.2"
serde = { version = "1.0", features = ["derive"]}
tensorflow = "0.21.0"
walkdir = "2.3.3"

